Solve misaligned scroll (#1)
* Create logo_ubuntu.svg, amend header/footer to take less space and have better wrap, simple classes.

* feat: add bp icon with current menu title in title

* feat: amend header footer futher, disable wrapping to make main content area predictable

* fix:solve-misaligned-scroll by making y scroll for each section

* fix: position of contact us form

* feat: add tsc -b && for test and dev.

* fix: separate layout for mobile devices.

* fix: missed these before om commit e72b8e90055074bf6d362c5a26267dfab3f5c937

* fix: missed these before om commit e72b8e90055074bf6d362c5a26267dfab3f5c937

* fix: solve font not being foung in svg file by making logo inline with css in index.css, add easter egg.

* All sections sshould have max-h-full to center the content and not cut it.

* feat: email is not stored or shared.

* feat: add close form to button.

* fix: make items-center only apply at large screens, since scrolling breaks with it. Simplied also element structure by removing divs.

* feat: enhance content.

* fix: change from svg to favicon, to prevent font not found error.

* feat: default hash value to first menu (services).

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.2em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -56,6 +56,11 @@ button {
   transition: border-color 0.25s;
   color: var(--primary-color)
 }
+
+#submitButton {
+	padding: 0.6em 1.2em;
+}
+
 button:hover {
   border-color: #b9d5ff;
 }
@@ -92,3 +97,30 @@ html {
     background-color: #f9f9f9;
   }
 } */
+
+/* Styles for logo */
+.text-style {
+	font-style: italic;
+	font-weight: 500;
+	font-size: 7.7611px;
+	font-family: Ubuntu;
+	user-select: none;
+	}
+	
+	.bot-logo-part {
+	fill: #b9d5ff;
+	}
+
+	.pilots-logo-part {
+	fill: #204a87;
+	}
+
+	.text-style:hover {
+		animation: squiggle 1.2s infinite;
+	}
+
+	@keyframes squiggle {
+		0% { transform: skewX(0deg); }
+		50% { transform: skewX(20deg); }
+		100% { transform: skewX(0deg); }
+	}
